[package]
name = "dedupe"
version = "0.1.1"
edition = "2021"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dragazo/dedupe"
description = """
A simple CLI tool for deduplicating files.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
sha2 = "0.10.2"
